# DTFetris

./: .eslintrc.json  .gitignore  AGENTS.md  README.md  eslint.config.mjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
.atl/: .skill-registry.cache.json  skill-registry.md
docs/: README.md  architecture-and-stack.md  domain-and-data-model.md  functional-requirements.md  packing-and-export.md  product-requirements.md  roadmap-risks.md  sdd-roadmap-tasks.md  testing-strategy.md  user-flows.md
openspec/: config.yaml
openspec/changes/v0-1-basic-editing/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/v0-1-design-import/: apply-progress.md  design.md  tasks.md
openspec/changes/v0-1-domain-model/: exploration.md  tasks.md  verify-report.md
openspec/specs/design-import/: spec.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  import.rs  mod.rs  packing.rs  persistence.rs
src-tauri/src/domain/: design.rs  mod.rs  packing.rs
src/commands/: index.test.ts  index.ts
src/components/DesignList/: DesignList.test.tsx  DesignList.tsx
src/components/MetricsPanel/: MetricsPanel.tsx
src/components/SheetPreview/: SheetPreview.tsx
src/store/: useAppStore.test.ts  useAppStore.ts
src/types/: domain.test.ts  domain.ts
src/utils/: importErrors.ts  units.test.ts  units.ts
tests/e2e/: basic.spec.ts
(+11 files in other folders)
