[package]
name = "dtf-sheet-optimizer"
version = "0.1.0"
description = "DTFetris"
authors = []
license = ""
repository = ""
default-run = "dtf-sheet-optimizer"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "dtf-sheet-optimizer"
path = "src/main.rs"

[lib]
name = "dtf_sheet_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
resvg = "0.43"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
